# meetingcode

./: README.md
advanced-python-features/: contextmanagers.py  coroutine1.py  coroutine2.py  coroutine3.py  decorator_0.py  decorator_1.py  decorator_2.py  decorator_3.py  descriptors.py  generators1.py  generators2.py  metaclasses.py
creating-packages/: Makefile  setup.py
creating-packages/src/hello/: hello.py  main.py
creating-packages/src/hello.egg-info/: PKG-INFO  SOURCES.txt
design-patterns/: abcmeta.py  borg.py  command.py  dependency_injection.py  factory.py  memento.py  mixin.py  observer.py  proxy.py  singleton-2.py  singleton-3.py  singleton-4.py  singleton.py  strategy.py
ieee754/: ieee754.py
poetry/: common_problems.md
poetry/example/: pyproject.toml
sql/: Vagrantfile
sql/alembiccing/: alembic.ini  orm.py  pyproject.toml
sql/alembiccing/alembic/: env.py
sql/alembiccing/alembic/versions/: 458bef86413e_noop.py  9b625ae52aee_added_users_table.py
sql/basicsql/: genomes.csv.bz2  lesson-1.md  lesson-2.md  topics
sql/sql-basics/: topics
tumiturbi/: led.py  recv.py
unicode/: unicode.py  unicode2.py  utf16  utf32  utf8
