[tool.poetry]
name = "example"
version = "0.2.5"
description = ""
authors = ["Stefano Borini <stefano.borini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
example = 'example.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

