[tool.poetry]
name = "alembiccing"
version = "0.1.0"
description = "\"Learning alembic\""
authors = ["Nishad Sohoni <natorious1990@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
alembic = "^1.2"
sqlalchemy = "^1.3"
pymysql = "^0.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
